Fixed z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -38,6 +38,7 @@ body {
     position: fixed;
     text-align: center;
     width: 100%;
+    z-index: 100;
 }
 
 .nav-mobile ul {
@@ -76,7 +77,7 @@ body {
     position: absolute;
     width: 250px;
     right: 0;
-    z-index: -1;
+    z-index: 1;
 }
 
 .nav li ul li {
@@ -91,7 +92,7 @@ body {
     min-height: 100vh;
     position: relative;
     width: 70%;
-    z-index: -1;
+    z-index: 0;
 }
 
 .content {
